--- a/ZONE-watcher/app/views/devise/registrations/edit.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,8 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
 
+<% if current_user.provider == nil %>
+
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
@@ -14,6 +16,7 @@
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
+<%end%>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
