--- a/ZONE-watcher/app/views/devise/registrations/new.html.erb
+++ b/ZONE-watcher/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,7 @@
+<% if session["devise.twitter_data"] != nil %>
+<%= render 'new_twitter'%> 
+<%else%>
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
@@ -6,6 +10,9 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
+  <div><%= f.label :login %><br />
+  <%= f.text_field :login %></div>
+  
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
@@ -16,3 +23,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<%end%>
