--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -2,20 +2,44 @@
 <ul class="nav pull-right">
   <% if user_signed_in? %>
     <li>
-    <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
+        <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %>
     </li>
   <% else %>
-    <li>
-    <%= link_to 'Login', new_user_session_path %>
+    <li class="dropdown">
+      <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
+      <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+
+<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+  <div><%= f.label :email %><br />
+  <%= f.email_field :email %></div>
+
+  <div><%= f.label :password %><br />
+  <%= f.password_field :password %></div>
+
+  <% if devise_mapping.rememberable? -%>
+    <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
+  <% end -%>
+
+  <div><%= f.submit "Sign in", :class => "btn btn-primary", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;" %></div>
+  <%= link_to image_tag("sign-in-with-twitter.png", :border => 0), user_omniauth_authorize_path(:twitter) %>
+
+<% end %>
+
+
+      </div>
     </li>
+    <li>
+        <%= link_to 'Login', new_user_session_path %>
+    </li>
+
   <% end %>
   <% if user_signed_in? %>
     <li>
-    <%= link_to 'Edit account', edit_user_registration_path %>
+        <%= link_to 'Edit account', edit_user_registration_path %>
     </li>
   <% else %>
     <li>
-    <%= link_to 'Sign up', new_user_registration_path %>
+        <%= link_to 'Sign up', new_user_registration_path %>
     </li>
   <% end %>
 </ul>
