--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -7,23 +7,23 @@
   <% else %>
     <li class="dropdown">
       <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
-      <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+      <div class="dropdown-menu" style="padding: 10px; padding-bottom: 0px;">
 
-<%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <% if devise_mapping.rememberable? -%>
-    <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
-  <% end -%>
-
-  <div><%= f.submit "Sign in", :class => "btn btn-primary", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;" %></div>
-  <%= link_to image_tag("sign-in-with-twitter.png", :border => 0), user_omniauth_authorize_path(:twitter) %>
-
-<% end %>
+        <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
+          <div>
+          <%= f.email_field :email, :value=>"Email",:width=>4 %></div>
+        
+          <div>
+          <%= f.password_field :password, :value=>"Password" %></div>
+        
+          <% if devise_mapping.rememberable? -%>
+            <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
+          <% end -%>
+        
+          <div><%= f.submit "Sign in", :class => "btn btn-primary", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;" %></div>
+          <%= link_to image_tag("sign-in-with-twitter.png", :border => 0), user_omniauth_authorize_path(:twitter) %>
+        
+        <% end %>
 
 
       </div>
