--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -20,16 +20,18 @@
             <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
           <% end -%>
         
-          <div><%= f.submit "Sign in", :class => "btn btn-primary", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;" %></div>
-          <%= link_to image_tag("sign-in-with-twitter.png", :border => 0), user_omniauth_authorize_path(:twitter) %>
+          <div>
+            <%= f.submit "Sign in", :class => "btn btn-primary", :style => "clear: left; width: 100%; height: 32px; font-size: 13px;" %>
+          </div>
+          <%= link_to raw("Sign in with <b>Github</b>"), user_omniauth_authorize_path(:github), :class=>"btn-auth btn-github" %>
+          <%= link_to raw("Sign in with <b>Twitter</b>"), user_omniauth_authorize_path(:twitter), :class=>"btn-auth btn-twitter" %>
+          <%= link_to raw("Sign in with <b>Google</b>"), user_omniauth_authorize_path(:google_oauth2), :class=>"btn-auth btn-google" %>
+
         
         <% end %>
 
 
       </div>
-    </li>
-    <li>
-        <%= link_to 'Login', new_user_session_path %>
     </li>
 
   <% end %>
