--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -1,9 +1,13 @@
 <div class="row-fluid">
 
     <% if @item.props["http://purl.org/rss/1.0/image"] != nil
-        image=@item.props["http://purl.org/rss/1.0/image"].html_safe  end %>
+        image=@item.props["http://purl.org/rss/1.0/image"].html_safe
+    elsif @item.uri.starts_with?('http://twitter.com')
+        image="assets/twitter.png"
+    end
+    %>
     
-    <% if image != nil %>
+    <% if image != nil  %>
         <div class="span3">
           <% if image.end_with?("flv") || image.end_with?("mp4") %>
             <div id="<%=image%>">Loading the player...</div>
