add the follow project button

--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -15,8 +15,6 @@
 <script type="text/javascript" src="/jwplayer/jwplayer.js" ></script>
 </head>
 <body>
-
-
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
@@ -34,6 +32,9 @@
         </div>
         <%= render 'layouts/login' %>
       </div>
+    </div>
+    <div style="z-index: 10">
+      <a href="http://www.zone-project.org/mailing-list/"><img style="position: absolute; top: 40px; right: 0; border: 0; z-index: 10" src="/imgs/follow_me.png" alt="Fork me on GitHub"></a>
     </div>
   </div>
 
