[#46178425] travail préliminaire sur le moteur de recherche

--- a/ZONE-watcher/app/assets/stylesheets/home.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#languages-select {
+    width: 530px;
+}
+
+.body-content {
+    margin-top: 20px;
+    border-radius: 4px;
+    background: whitesmoke;
+    border: solid 1px #CCC;
+}
+
+.body-content > div {
+    margin: 20px;
+}
