--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/zone-wp.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/slate.css") %>
+  <%= stylesheet_link_tag("/assets/tagit.css") %>
 <script type="text/javascript" src="/jwplayer/jwplayer.js" ></script>
 </head>
 <body>
@@ -28,6 +29,7 @@
           <ul class="nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="/sources">Sources List</a></li>
+            <!--<li><a href="/twitter">See my twitter timeline!</a></li>-->
           </ul>
         </div>
         <%= render 'layouts/login' %>
