[#46178667] better sources add form with help and validation

--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -8,11 +8,17 @@
   <%= javascript_include_tag params[:controller] %>
   <%= csrf_meta_tags %>
   <%= javascript_include_tag("/bootstrap/js/bootstrap.min.js")%>
+  <%= javascript_include_tag "/jquery.sexy-combo/jquery.sexy-combo.js" %>
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap.min.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/bootstrap-responsive.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/zone-wp.css") %>
   <%= stylesheet_link_tag("/bootstrap/css/slate.css") %>
-  <%= stylesheet_link_tag("/assets/tagit.css") %>
+  <%= #stylesheet_link_tag("/assets/tagit.css")
+  %>
+  <%= stylesheet_link_tag("/jquery.sexy-combo/css/sexy-combo.css") %>
+  <%= stylesheet_link_tag("/jquery.sexy-combo/css/sexy/sexy.css") %>
+
+
 <script type="text/javascript" src="/jwplayer/jwplayer.js" ></script>
 </head>
 <body>
