--- a/ZONE-watcher/app/views/sources/_form.html.erb
+++ b/ZONE-watcher/app/views/sources/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@source) do |f| %>
+<%= form_for(@source, :html => { :class => "form-horizontal"} ) do |f| %>
   <% if @source.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@source.errors.count, "error") %> prohibited this source from being saved:</h2>
@@ -11,31 +11,53 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :uri %><br />
-    <%= f.text_field :uri %>
+  <div class="control-group">
+    <%= f.label :uri, class: "control-label" %>
+    <div class="controls">
+        <%= f.text_field :uri %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :label %><br />
-    <%= f.text_field :label %>
+  <div class="control-group">
+    <%= f.label :label, class: "control-label" %>
+    <div class="controls">
+        <%= f.text_field :label %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :lang %><br />
-    <%= f.text_field :lang %>
-  </div>
-  <div class="field">
-    <%= f.label :owner %><br />
-    <%= f.text_field :owner %>
-  </div>
-  <div class="field">
-    <%= f.label :thumb %><br />
-    <%= f.text_field :thumb %>
-  </div>
-  <div class="field">
-    <%= f.label :theme %><br />
-    <%= f.text_field :theme %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+
+
+    <div class="control-group">
+      <label for="ajax-combo" class="control-label">Lang:</label>
+      <div class="controls">
+        <div id="ajax-container-theme"></div>
+      </div>
+    </div>
+
+    <div class="control-group">
+      <label for="ajax-combo" class="control-label">Theme:</label>
+      <div class="controls">
+        <div id="ajax-container-lang"></div>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <%= f.submit 'Submit', :class => 'btn' %>
+    </div>
 <% end %>
+
+<script>
+    $.sexyCombo.create({
+        name: "theme",
+        id: "source_theme",
+        container: "#ajax-container-theme",
+        url: "/sources/langs.json",
+        suffix: ""
+    });
+    $.sexyCombo.create({
+        name: "lang",
+        id: "ajax-container-lang",
+        container: "#ajax-container-lang",
+        url: "/sources/themes.json",
+        suffix: ""
+
+    });
+</script>
