--- a/ZONE-watcher/app/views/sources/index.html.erb
+++ b/ZONE-watcher/app/views/sources/index.html.erb
@@ -11,6 +11,7 @@
   </tr>
 
 <% @sources.each do |source| %>
+      <% next if source == nil  %>
       <% filter = Filter.new(:prop => "http://purl.org/rss/1.0/source",:value => source.uri) %>
       <% uriNumber = filters_getNumber_path(:old => [filter]) %>
   <tr>
@@ -43,3 +44,11 @@
 
 <%= link_to 'New Source', new_source_path %>
 
+
+<hr>
+
+<h1> Import opml file</h1>
+<%= form_for(:upload, :url => { :action => "uploadopml" }, :multipart => true) do |form| %>
+    <p><%= form.file_field 'datafile' %><%= form.submit "Upload" %></p>
+
+<% end %>
