--- a/ZONE-watcher/app/views/items/show.html.erb
+++ b/ZONE-watcher/app/views/items/show.html.erb
@@ -28,7 +28,10 @@
         <a href= "<%= @item.uri %>">
             <%= @item.props["http://purl.org/rss/1.0/title"][0]%>
         </a>
-        <%= @item.props["http://purl.org/rss/1.0/pubDate"][0]%>
+        <%= begin
+              @item.props["http://purl.org/rss/1.0/pubDate"][0]
+            rescue
+            end %>
         <div class="btn-toolbar">
             <% @item.props.each do |item|
                item[1].each do |value|
