--- a/ZONE-watcher/app/views/layouts/_login.html.erb
+++ b/ZONE-watcher/app/views/layouts/_login.html.erb
@@ -1,5 +1,5 @@
 
-<ul class="nav pull-right">
+<ul class="nav">
   <% if user_signed_in? %>
     <li>
         <%= link_to 'Edit account', edit_user_registration_path %>
