--- a/ZONE-watcher/app/assets/stylesheets/home.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,7 @@
 }
 
 .body-content {
-    margin-top: 20px;
+    margin: 20px;
     border-radius: 4px;
     background: whitesmoke;
     border: solid 1px #CCC;
