--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -1,3 +1,7 @@
-<h1>Compose you filter!</h1>
+<%= render 'home/search'%>
 
-<%= render 'search'%>
+
+
+<div class="footer-wrapper">
+  <footer>That's the sticky footer</footer>
+</div>
