[#47716175 #46178425] second draft on search area.

--- a/ZONE-watcher/app/views/home/_search.html.erb
+++ b/ZONE-watcher/app/views/home/_search.html.erb
@@ -3,7 +3,7 @@
               <div class="span3"></div>
                 <div class="search-zone span6 columns body-content">
                     <div>
-                        <form action="/items">
+                        <form id="search-form" action="/items">
                             <fieldset>
                                 <div class="clearfix">
                                     <label class="text-center"><h1>What are you looking for?</h1></label>
