--- a/ZONE-watcher/app/assets/stylesheets/search_box.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/search_box.css.scss
@@ -15,3 +15,16 @@
   width: 100%;
   text-align: left;
 }
+
+.select-sources{
+  text-align: right;
+}
+
+.select-source-input{
+  background-color: #ffffff;
+  margin-top: 0px;
+}
+
+.select-source-ul{
+  margin-top: 0px;
+}
