[#46178425] search engine can now work with specific sources

--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
-            <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to "Items", items_path %></li>
-            <li class="<%= 'active' if current_page?(sources_path) %>"><%= link_to "Sources list", sources_path %></li>
+            <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to "News", items_path %></li>
+            <li class="<%= 'active' if current_page?(sources_path) %>"><%= link_to "Sources", sources_path %></li>
             <li class="<%= 'active' if current_page?(twitter_path) %>"><%= link_to "Your twitter timeline!", twitter_path %></li>
           </ul>
         </div>
