--- a/ZONE-watcher/app/views/home/_search.html.erb
+++ b/ZONE-watcher/app/views/home/_search.html.erb
@@ -8,8 +8,8 @@
                         <label class="text-center"><h1>What are you looking for?</h1></label>
                         <div class="input">
                             <ul id="search-form" class="fake-input" tabindex="1">
-                                <% if @filters != nil && @filters.length > 0 %>
-                                    <% @filters.each do |filter| %>
+                                <% if @purFilters != nil && @purFilters.length > 0 %>
+                                    <% @purFilters.each do |filter| %>
                                         <li><%= filter.get_search_button%></li>
                                     <% end %>
                                 <% end %>
@@ -18,7 +18,7 @@
                     </div>
                 </fieldset>
                 <div class="row">
-                  <div class="span3">Only in your sources</div>
+                  <div class="span3"><!--Only in your sources--></div>
                   <div class="span2">
                     <div class="select-sources">
                       <a href="#" type="button" >
@@ -38,7 +38,7 @@
 
                         <% if @sources != nil && @sources.length > 0 %>
                             <% @sources.each do |source| %>
-                                <li><%= source.get_search_button%></li>
+                                <li><%= source.value%></li>
                             <% end %>
                         <% end %>
                       </ul>
