--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -1,7 +1,10 @@
+<div class="search">
+
 <%= render 'home/search'%>
-
-
-
-<div class="footer-wrapper">
-  <footer>That's the sticky footer</footer>
 </div>
+</div> <!--close container-->
+
+<div class="splash">
+  <div class="container">
+    <h1 class="text-center">What is reador?</h1>
+  </div>
