--- a/ZONE-watcher/app/views/home/_search.html.erb
+++ b/ZONE-watcher/app/views/home/_search.html.erb
@@ -1,65 +1,55 @@
-<div class="row">
-    <div class="span3"></div>
-    <div class="span6 columns body-content">
-        <div>
-            <form action="/items">
-                <fieldset class="search-zone">
-                    <div class="clearfix">
-                        <label class="text-center"><h1>What are you looking for?</h1></label>
-                        <div class="input">
-                            <ul id="search-form" class="fake-input" tabindex="1">
-                                <% if @purFilters != nil && @purFilters.length > 0 %>
-                                    <% @purFilters.each do |filter| %>
-                                        <li><%= filter.get_search_button%></li>
-                                    <% end %>
-                                <% end %>
-                            </ul>
-                        </div>
-                    </div>
-                </fieldset>
-                <div class="row">
-                  <div class="span3"><!--Only in your sources--></div>
-                  <div class="span2">
-                    <div class="select-sources">
-                      <a href="#" type="button" >
-                        select sources
-                      </a>
-                    </div>
+<div class="row" xmlns="http://www.w3.org/1999/html">
+  <div class="span2"></div>
+  <div id="dino-logo" class="span3"><img src="assets/dino.png"/></div>
+  <div class="span5 ">
+    <h1 class="triangle-border left"  id="reador-title"><u>Reador</u> can help you?</h1>
 
-
-
-                </div>
-              </div>
-              <div id="sources-collapse">
-                <fieldset >
-                  <div class="clearfix">
-                    <div class="input select-source-input" style="display:none">
-                      <ul id="sources-list"  class="fake-input select-source-ul" tabindex="1">
-
-                        <% if @sources != nil && @sources.length > 0 %>
-                            <% @sources.each do |source| %>
-                                <li><%= source.value%></li>
-                            <% end %>
-                        <% end %>
-                      </ul>
-                    </div>
-                  </div>
-                </fieldset>
-              </div>
-
-
-
-
-                <div class="actions">
-                    <button type="submit" class="btn btn-info btn-large btn-primary goButton">Let us know</button>
-                </div>
-                <% if @uriForItemsNumber != nil%>
-                    <span class="items-count">(<a href= "<%=@uriForItemsNumber%>"><i class=" icon-refresh" id="number_items_wait"></i></a><span id='number_items_container'></span> items)</span>
-                <%end%>
-            </form>
+    <div class="search-zone">
+      <form action="/items">
+        <div class="input">
+          <!-- search box -->
+          <ul id="search-form" class="fake-input" tabindex="1">
+            <% if @purFilters != nil && @purFilters.length > 0 %>
+                <% @purFilters.each do |filter| %>
+                    <li><%= filter.get_search_button %></li>
+                <% end %>
+            <% end %>
+          </ul>
         </div>
+
+        <!-- sources select bouton-->
+        <div class="row select-sources text-right">
+          <a href="#" type="button">
+            select sources
+          </a>
+        </div>
+
+        <!-- sources input box -->
+        <div id="sources-collapse"  class="input select-source-input" style="display:none">
+          <ul id="sources-list" class="fake-input select-source-ul" tabindex="1">
+            <% if @sources != nil && @sources.length > 0 %>
+                <% @sources.each do |source| %>
+                    <li><%= source.value %></li>
+                <% end %>
+            <% end %>
+          </ul>
+        </div>
+
+        <!-- go button-->
+        <div class="text-center">
+          <div>
+            <button type="submit" class="center btn btn-success btn-large btn-primary goButton">Go reador!</button>
+          </div>
+          <div>
+            <% if @uriForItemsNumber != nil %>
+              <span class="items-count">(<a href="<%= @uriForItemsNumber %>"><i class=" icon-refresh" id="number_items_wait"></i></a><span id='number_items_container'></span> items)</span>
+            <% end %>
+          </div>
+        </div>
+      </form>
     </div>
-    <div class="span3"></div>
+  </div>
+  <div class="span2"></div>
 </div>
 
 
