--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
       </div>
     </div>
   </div>
-  <div style="z-index: 10">
+  <div id="follow-project">
     <a href="http://www.zone-project.org/mailing-list/"><img class="follow-project-picture" src="/imgs/follow_me.png" alt="Fork me on GitHub"></a>
   </div>
 
@@ -59,5 +59,8 @@
     <%= yield %>
   </div>
 
+<div class="footer">
+<%=  render "layouts/footer" %>
+</div>
 </body>
 </html>
