[#48567809] add dropdown on "more about reador"

--- a/ZONE-watcher/app/assets/stylesheets/scaffolds.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/scaffolds.css.scss
@@ -3,9 +3,9 @@
 body {
   background-color: #fff;
   color: #333;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-family: proxima-nova,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
+  line-height: 20px;
   padding-top:100px;
 }
 
