--- a/ZONE-watcher/app/assets/stylesheets/home.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/home.css.scss
@@ -23,11 +23,32 @@
   margin-top:60px;
   padding-top: 20px;
   padding-bottom: 40px;
+  bottom:0px;
+  position:absolute;
+  width: 100%;
 
 }
 
-#why h4 [class^="icon-"], #whats-new h4 [class^="icon-"], #why h4 [class*=" icon-"], #whats-new h4 [class*=" icon-"] {
+#why h4 [class^="icon-"], #who h4 [class^="icon-"], #why h4 [class*=" icon-"], #who h4 [class*=" icon-"] {
   font-size: 28px;
   margin-right: 5px;
   vertical-align: -10%;
+}
+
+#who{
+  margin-top:30px;
+}
+#who{
+}
+
+.infos-off{
+  display: none;
+}
+
+.infos-on{
+  display: visible;
+}
+
+#who h4{
+  font-size: 2em;
 }
