--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -3,53 +3,68 @@
 <%= render 'home/search'%>
 </div>
 </div>
+
 <div class="splash">
   <div class="container">
+    <div class="text-center more-infos"><h1><a href="#">More about Reador!</a></h1></div>
 
-  <section id="why" class="clearfix">
-    <div class="row">
-      <h1 class="text-center">More about Reador!</h1>
-      <div class="span4">
-        <h4><i class="icon-envelope-alt"></i> Get in touch</h4>
-        You can easily use reador with other people exchanging filters and news sources.
+    <span class="infos infos-off">
+      <section id="why" class="clearfix">
+        <div class="row">
+
+          <div class="span4">
+            <h4><i class="icon-envelope-alt"></i> Get in touch</h4>
+            You can easily use reador with other people exchanging filters and news sources.
+          </div>
+          <div class="span4">
+            <h4><i class="icon-twitter"></i> Work with twitter!</h4>
+            You can use Reador to organize your twitter timeline!
+          </div>
+          <div class="span4">
+            <h4><i class="icon-fullscreen"></i> Scalable</h4>
+            You can use reador on many different devices.
+          </div>
+        </div>
+        <div class="row">
+          <div class="span4">
+            <h4><i class=" icon-github"></i> OpenSource</h4>
+            Reador is OpenSource, you can download, fork, make pull requests on <a href="https://github.com/descl/ZONE">ZONE-project repo</a>.
+          </div>
+          <div class="span4">
+            <h4><i class="icon-rss"></i> Work with other RSS feed aggregator</h4>
+            You can take as output as you filters an RSS feeds for you favorite feeds management system.
+          </div>
+          <div class="span4">
+            <h4><i class="icon-beer"></i> It's free as in free beer</h4>
+            reador is free and is provided free of charge by Inria.
+          </div>
+        </div>
+        <div class="row">
+          <div class="span4">
+            <h4><i class="icon-thumbs-up"></i> Made for You</h4>
+           Reador is made for you! We realy need your feedback and <a href="https://github.com/descl/ZONE/pulls">pull requests</a>.
+          </div>
+          <div class="span4">
+            <h4><i class="icon-tint"></i> Semantic</h4>
+            Install FontAwesome.otf and <a href="design.html" target="_blank">visit the copy & paste page</a>. Happy designing.
+          </div>
+          <div class="span4">
+            <h4><i class="icon-search"></i> Usefull for "veilleurs"</h4>
+            Reador is a fabulous tool for veilleurs
+          </div>
+        </div>
+      </section>
+    <section id="who" class="clearfix">
+      <div class="row">
+        <div class="span3"></div>
+        <div class="span6">
+          <h4><i class="icon-user"></i> Who is under reador?</h4>
+          Reador is mainly developed by <a href="http://desclaux.me">Christophe Desclaux<a>. He is assisted by the frenche research institute <a href="http://www.inria.fr">Inria</a> under the contest <a href="http://boostyourcode.inria.fr">BoostYourCode2012</a>.
+          <iframe width="560" height="315" src="http://www.youtube.com/embed/yFkCumtCEeg" frameborder="0" allowfullscreen></iframe>
+        </div>
+          <div class="span3"></div>
       </div>
-      <div class="span4">
-        <h4><i class="icon-twitter"></i> Work with twitter!</h4>
-        You can use Reador to organize your twitter timeline!
-      </div>
-      <div class="span4">
-        <h4><i class="icon-fullscreen"></i> Scalable</h4>
-        You can use reador on many different devices.
-      </div>
-    </div>
-    <div class="row">
-      <div class="span4">
-        <h4><i class=" icon-github"></i> OpenSource</h4>
-        Reador is OpenSource, you can download, fork, make pull requests on <a href="https://github.com/descl/ZONE">ZONE-project repo</a>.
-      </div>
-      <div class="span4">
-        <h4><i class="icon-rss"></i> Work with other RSS feed aggregator</h4>
-        You can take as output as you filters an RSS feeds for you favorite feeds management system.
-      </div>
-      <div class="span4">
-        <h4><i class="icon-beer"></i> It's free as in free beer</h4>
-        reador is free and is provided free of charge by Inria.
-      </div>
-    </div>
-    <div class="row">
-      <div class="span4">
-        <h4><i class="icon-thumbs-up"></i> Made for You</h4>
-       Reador is made for you! We realy need your feedback and <a href="https://github.com/descl/ZONE/pulls">pull requests</a>.
-      </div>
-      <div class="span4">
-        <h4><i class="icon-tint"></i> Semantic</h4>
-        Install FontAwesome.otf and <a href="design.html" target="_blank">visit the copy & paste page</a>. Happy designing.
-      </div>
-      <div class="span4">
-        <h4><i class="icon-search"></i> Usefull for "veilleurs"</h4>
-        Reador is a fabulous tool for veilleurs
-      </div>
-    </div>
-  </section>
-    </div>
+    </section>
+   </span>
+  </div>
 </div>
